--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/Zoya.png" title="Zoya's Furniture">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/Zoya.png" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Team Project</div>
@@ -155,8 +155,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Team Project</div>
-                                <div class="project-name">Zoya's Furniture</div>
+                                <div class="project-category text-white-50">Project Name</div>
+                                <div class="project-name">Project Name</div>
                             </div>
                         </a>
                     </div>
