--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                             <p class="text-muted mb-0">I provide ongoing maintenance, revisions, upgrades, backups, testing and technical support to my clients at an affordable price. </p>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <div class="mb-2"><i class="bi-computer fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2"> Mobile Web Appplication</h3>
+                            <p class="text-muted mb-0">I design and provide best user experience and interactive web application using HTML, CSS, Javascript, and Jquery.</p>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </section>
