--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-computer fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2"> Mobile Web Appplication</h3>
                             <p class="text-muted mb-0">I design and provide best user experience and interactive web application using HTML, CSS, Javascript, and Jquery.</p>
                         </div>
