--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
                             </div>
                         </a>
                     </div>
-<!--                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
+                  <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="RentGuide">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Project Name</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Team Project</div>
+                                <div class="project-name">RentGuide</div>
                             </div>
                         </a>
-                    </div> -->
+                    </div> 
                 </div>
             </div>
         </div>
