--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                         </a>
                     </div>
                   <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/home page.jpg" title="RentGuide">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/home page.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/home page.png" title="RentGuide">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/home page.png" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Team Project</div>
                                 <div class="project-name">RentGuide</div>
